--- a/my-project/package.json
+++ b/my-project/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "json-server": "^1.0.0-beta.3",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
